<resources>
    <string name="app_name">EventHandler</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="location">Location:</string>
    <string name="price">Price:</string>
    <string name="date">Date:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="time">Time:</string>
    <string name="notification">Notification</string>
    <string name="allow">Enable notifications</string>
    <string name="label_on">On</string>
    <string name="label_off">Off</string>
    <string name="currency">Currency</string>
    <string name="new_event">Create new event</string>
    <string name="fail">Failed to get exchange rates</string>

    <string-array name="currencies">
        <item>HUF</item>
        <item>EUR</item>
        <item>USD</item>
    </string-array>
</resources>
